MyProject/force-app/main/default/objects/Flight__c/fields/Airline_Name__c.field-meta.xml
<CustomField>
    <fullName>Airline_Name__c</fullName>
    <defaultValue>&quot;indigo&quot;</defaultValue>
    <label>Airline Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>