MyProject/force-app/main/default/objects/Flight__c/fields/Booked_Seats__c.field-meta.xml
<CustomField>
    <fullName>Booked_Seats__c</fullName>
    <label>Booked Seats</label>
    <summarizedField>Booking__c.Number_of_Seats__c</summarizedField>
    <summaryForeignKey>Booking__c.Flight__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>