MyProject/force-app/main/default/objects/Flight__c/validationRules/Base_Fare_not_Chngable.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_Fare_not_Chngable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(Base_Fare__c)
)</errorConditionFormula>
    <errorDisplayField>Base_Fare__c</errorDisplayField>
    <errorMessage>This Fare You can&apos;t change</errorMessage>
</ValidationRule>